// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductSubscriptionForm edit existing subscription 1`] = `
<DocumentFragment>
  <div
    class="product-subscription-form"
  >
    <form
      class=""
    >
      <div
        class="row"
      >
        <div
          class="col-md-6"
        >
          <div
            class="product-subscription-user-count-control form-group align-items-center"
          >
            <label
              class="mb-0 mr-2 font-weight-bold"
              for="product-subscription-user-count-control__userCount"
            >
              Users
            </label>
            <div
              class="d-flex align-items-center"
            >
              <input
                class="form-control w-auto"
                id="product-subscription-user-count-control__userCount"
                max="50000"
                min="25"
                required=""
                step="25"
                type="number"
                value="123"
              />
            </div>
          </div>
          <h4
            class="h4 mt-2 mb-0"
          >
            Plan
          </h4>
          <div
            class="product-plan-form-control"
          >
            <div
              class="iconInline loadingSpinner"
            />
          </div>
        </div>
        <div
          class="col-md-6 mt-3 mt-md-0"
        >
          <h3
            class="h3 mt-2 mb-0"
          >
            Billing
          </h3>
          <div
            class="new-product-subscription-payment-section"
          >
            <div
              class="form-text mb-2"
            >
              <div
                class="iconInline loadingSpinner"
              />
            </div>
          </div>
          <div
            class="payment-token-form-control"
          >
            <cardelement
              class="form-control card cardDisabled"
              disabled=""
            />
          </div>
          <div
            class="form-group mt-3"
          >
            <button
              class="btn btnSecondary btnLg w-100 d-flex align-items-center justify-content-center"
              disabled=""
              type="submit"
            >
              Submit
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`ProductSubscriptionForm new subscription for anonymous viewer (no account) 1`] = `
<DocumentFragment>
  <div
    class="product-subscription-form"
  >
    <form
      class=""
    >
      <div
        class="row"
      >
        <div
          class="col-md-6"
        >
          <div
            class="product-subscription-user-count-control form-group align-items-center"
          >
            <label
              class="mb-0 mr-2 font-weight-bold"
              for="product-subscription-user-count-control__userCount"
            >
              Users
            </label>
            <div
              class="d-flex align-items-center"
            >
              <input
                class="form-control w-auto"
                id="product-subscription-user-count-control__userCount"
                max="50000"
                min="25"
                required=""
                step="25"
                type="number"
                value="25"
              />
            </div>
          </div>
          <h4
            class="h4 mt-2 mb-0"
          >
            Plan
          </h4>
          <div
            class="product-plan-form-control"
          >
            <div
              class="iconInline loadingSpinner"
            />
          </div>
        </div>
        <div
          class="col-md-6 mt-3 mt-md-0"
        >
          <h3
            class="h3 mt-2 mb-0"
          >
            Billing
          </h3>
          <div
            class="new-product-subscription-payment-section"
          >
            <div
              class="form-text mb-2"
            >
              —
            </div>
          </div>
          <div
            class="form-group mt-3"
          >
            <a
              class="anchorLink btn btnPrimary btnLg w-100 center"
              href="/sign-up?returnTo=%2Fsubscriptions%2Fnew"
            >
              Create account or sign in to continue
            </a>
            <small
              class="form-text text-muted"
            >
              A user account on Sourcegraph.com is required to create a subscription so you can view the license key and invoice.
            </small>
            <hr
              class="my-3"
            />
            <small
              class="form-text text-muted"
            >
              Next, you'll enter payment information and buy the subscription.
            </small>
          </div>
          <div
            class="payment-token-form-control"
          >
            <cardelement
              class="form-control card cardDisabled"
              disabled=""
            />
          </div>
          <div
            class="form-group mt-3"
          >
            <button
              class="btn btnSecondary btnLg w-100 d-flex align-items-center justify-content-center"
              disabled=""
              type="submit"
            >
              Submit
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`ProductSubscriptionForm new subscription for existing account 1`] = `
<DocumentFragment>
  <div
    class="product-subscription-form"
  >
    <form
      class=""
    >
      <div
        class="row"
      >
        <div
          class="col-md-6"
        >
          <div
            class="product-subscription-user-count-control form-group align-items-center"
          >
            <label
              class="mb-0 mr-2 font-weight-bold"
              for="product-subscription-user-count-control__userCount"
            >
              Users
            </label>
            <div
              class="d-flex align-items-center"
            >
              <input
                class="form-control w-auto"
                id="product-subscription-user-count-control__userCount"
                max="50000"
                min="25"
                required=""
                step="25"
                type="number"
                value="25"
              />
            </div>
          </div>
          <h4
            class="h4 mt-2 mb-0"
          >
            Plan
          </h4>
          <div
            class="product-plan-form-control"
          >
            <div
              class="iconInline loadingSpinner"
            />
          </div>
        </div>
        <div
          class="col-md-6 mt-3 mt-md-0"
        >
          <h3
            class="h3 mt-2 mb-0"
          >
            Billing
          </h3>
          <div
            class="new-product-subscription-payment-section"
          >
            <div
              class="form-text mb-2"
            >
              —
            </div>
          </div>
          <div
            class="payment-token-form-control"
          >
            <cardelement
              class="form-control card cardDisabled"
              disabled=""
            />
          </div>
          <div
            class="form-group mt-3"
          >
            <button
              class="btn btnSecondary btnLg w-100 d-flex align-items-center justify-content-center"
              disabled=""
              type="submit"
            >
              Submit
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
